fixed learn.html style that was making the page too wide on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -1120,7 +1120,7 @@ img.the-cycle {
     color: #3fc2a5;
     padding-left: 16px;
     line-height: 58px;
-    width: 130%;
+    width: 100%;
     border: none;
     box-shadow: none;
     background-color: transparent;
